--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/css/style.css
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/css/style.css
@@ -364,7 +364,7 @@ a:hover{
 .banner_content{
 	margin-top: 170px;
     margin-left: 75px;
-    width: 50%px;
+    width: 650px;
 }
 .banner_content strong{
 	text-transform: capitalize;
