--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/css/style.css
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/css/style.css
@@ -304,11 +304,12 @@ a:hover{
     background-repeat: no-repeat;
 }
 .banner_bg{
-    background-image: url(../images/banner.jpg);
-    background-size: cover;
-    background-position: center center;
-    position: relative;
+    background-image: url(../images/banner1.jpg);
+    background-image: url(../images/banner2.jpg);
+    width: 50%;
+    position:;
 }
+
 .banner_bg:before{
     content: "";
     position: absolute;
