--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/css/style.css
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/css/style.css
@@ -298,17 +298,20 @@ a:hover{
     height: 100%;
     top: 0;
 }
-.main_banner{
-    height: 850px;
-    background-size: cover;
+
+.banner_left{
+    background-image: url(../images/banner1.jpg);
+    height:850px;
+    background-size: 850px;
     background-repeat: no-repeat;
 }
-.banner_bg{
-    background-image: url(../images/banner.jpg);
-    background-size: cover;
-    background-position: center center;
-    position: relative;
+.banner_right{
+    background-image: url(../images/banner2.jpg);
+    height:850px;
+    background-size: 850px;
+    background-repeat: no-repeat;
 }
+
 .banner_bg:before{
     content: "";
     position: absolute;
