--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/css/style.css
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/css/style.css
@@ -292,23 +292,17 @@ a:hover{
 /* ----------------------------------------------------------------
      [ 04 Start Banner ]
 -----------------------------------------------------------------*/
-#particles-js{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-}
 
 .banner_left{
-    background-image: url(../images/banner1.jpg);
+    background-image: url(../images/banner_01.jpg);
     height:850px;
-    background-size: 850px;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 .banner_right{
-    background-image: url(../images/banner2.jpg);
+    background-image: url(../images/banner_02.jpg);
     height:850px;
-    background-size: 850px;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
@@ -347,29 +341,7 @@ a:hover{
 .banner_content p{
     color: #1f4821;
 }
-.banner-btn{
-    margin-top: 40px;
-}
-.banner_btn{
-    color: #fff;
-    font-size: 15px;
-    margin-top: 30px;
-    text-transform: uppercase;
-    padding: 15px 30px;
-    letter-spacing: 0.5px;
-    font-weight: 600;
-    background: transparent;
-    border-radius: 25px;
-    line-height: 10px;
-    border: 2px solid #fff;
-    -webkit-transition: all 0.4s ease-in-out;
-    transition: all 0.4s ease-in-out 0s;
-}
-.banner_btn:hover{
-    color: #333333;
-    border: 2px solid #fff;
-    background: #fff;
-}
+
 /* ----------------------------------------------------------------
     [ End Banner ]
 -----------------------------------------------------------------*/
