--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/css/style.css
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/css/style.css
@@ -500,7 +500,7 @@ a:hover{
 
 .countdown-box {
   width: 22%;
-  background-color: rgba(255, 255, 255, 0.8); /* white with 80% opacity */
+  background-color: rgba(255, 255, 255, 0.4); /* white with 40% opacity */
   border-radius: 5px;
   padding: 10px;
   text-align: center;
@@ -513,6 +513,17 @@ a:hover{
 .countdown-label {
   font-size: 24px;
 }
+
+/* adjust font size for smaller screens */
+@media screen and (max-width: 480px) {
+  .countdown-value {
+    font-size: 32px;
+  }
+  .countdown-label {
+    font-size: 16px;
+  }
+}
+
 
 /* Adjust layout for screens smaller than 768px */
 @media (max-width: 767px) {
@@ -527,18 +538,17 @@ a:hover{
   }
 }
 
-.cta_section {
-  background: url(../images/cta-action.jpg);
-  position: relative;
-  background-size: 100%;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+.col-12{
+    text-align: center;
 }
-
+.cta_section{
+    background: url(../images/cta-action.jpg);
+    position: relative;
+    background-size: 100%;
+    background-attachment: fixed;
+    top: 50%;
+    background-repeat: no-repeat;
+}
 .cta_section:before{
     position: absolute;
     content: "";
