--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/css/style.css
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/css/style.css
@@ -321,8 +321,9 @@ a:hover{
 }
 
 .banner_content{
-    margin-top: 35%;
-    margin-left: 15%;
+  margin-top: 35%;
+  margin-left: 15%;
+  white-space: nowrap;
 }
 .banner_content strong{
     text-transform: capitalize;
@@ -541,6 +542,7 @@ a:hover{
 .col-12{
     text-align: center;
 }
+
 .cta_section{
     background: url(../images/cta-action.jpg);
     position: relative;
