--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/css/style.css
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/css/style.css
@@ -546,11 +546,15 @@ a:hover{
 .cta_section{
     background: url(../images/cta-action.jpg);
     position: relative;
-    background-size: 100%;
+    background-size: cover;
+    background-position: center center;
     background-attachment: fixed;
-    top: 50%;
-    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
+
 .cta_section:before{
     position: absolute;
     content: "";
