--- a/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/css/style.css
+++ b/4b26b4f3c0c67b3f6ca8e6ed69b72846cb707863/css/style.css
@@ -541,13 +541,13 @@ a:hover{
     background-repeat: no-repeat;
     justify-content: center;
     align-items: center;
-    height: 75vh;
+    height: 100vh;
 }
 
 /* Set a smaller background size for screens smaller than 768px */
 @media (max-width: 767px) {
   .cta_section {
-    background-size: contain;
+    background-size: 160%;
   }
 }
 
